Day5/app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      version: v1
  template:
    metadata:
      labels:
        app: hello
        version: v1
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: hello-v1
          image: 'quay.io/redhattraining/ossm-maven-simplest:1.0'
          ports:
            - containerPort: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      version: v2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello
        version: v2
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: hello-v2
          image: 'quay.io/redhattraining/ossm-maven-simplest:2.0'
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: hello
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: hello
