Day5/canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hello
spec:
  host: hello
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-vs
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway
  http:
    - match:
        - uri:
            prefix: /hello
      route:
        - destination:
            host: hello
            subset: v1
          weight: 90
        - destination:
            host: hello
            subset: v2
          weight: 10
